JPA/AUTH replaced by Firebase